--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <section>
         <div class="container">
             <div class="row align-items-center">
-              <div class="col">
+              <div class="col col-lg-6 col-sm-12">
                  <h1>Be the Penguins <br><span>of Winter</span></h1>
                  <p>Lorem Ipsum is simply dummy text of the printing 
                     and typesetting industry.</p>
                 <a href="#" class="btn"><img src="icons/shopping-cart 1.png" alt="" width="24" height="22">Buy now</a>
               </div>
-              <div class="col">
+              <div class="col col-lg-6 col-sm-12">
                 <img src="images/model.png" alt="" width="440" height="648">
               </div>
             </div>
