--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     and typesetting industry.</p>
                 <a href="#" class="btn"><img src="icons/shopping-cart 1.png" alt="" width="24" height="22">Buy now</a>
               </div>
-              <div class="col col-lg-6 col-sm-12">
-                <img src="images/model.png" alt="" width="440" height="648">
+              <div class="col">
+
               </div>
             </div>
         </section>
